# oneplatform_k8s

./: .env.example  .gitignore  Readme.md
.azure-pipelines/: ci-ai-service.yml  ci-backend.yml  ci-frontend.yml  helm-lint.yml  opa-conftest.yml  terraform.yml
.azure-pipelines/templates/: docker-build-scan-push.yml  gitops-bump.yml  node-lint-test.yml  python-lint-test.yml  sast-semgrep.yml
.github/workflows/: ci-ai-service.yml  ci-backend.yml  ci-frontend.yml  helm-lint.yml  opa-conftest.yml  terraform.yml
apps/calculator-ai-service/: Dockerfile  pyproject.toml
apps/calculator-ai-service/app/: llm_client.py  main.py  solver.py
apps/calculator-ai-service/tests/: test_solver.py
apps/calculator-backend/: Dockerfile  pyproject.toml
apps/calculator-backend/app/: main.py  math_engine.py
apps/calculator-backend/tests/: test_api.py  test_math_engine.py
apps/calculator-frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
argocd-apps/: project.yaml
argocd-apps/dev/: app-of-apps.yaml  calculator-ai-service.yaml  calculator-backend.yaml  calculator-frontend.yaml  platform-ingress-gitops.yaml  platform-mlops.yaml  platform-observability.yaml  platform-security-mesh.yaml
argocd-apps/prod/: app-of-apps.yaml  calculator-ai-service.yaml  calculator-backend.yaml  calculator-frontend.yaml
argocd-apps/staging/: app-of-apps.yaml  calculator-ai-service.yaml  calculator-backend.yaml  (+1 more)
scripts/: azdo-setup.sh  azure-bootstrap.sh  bootstrap.sh  ensure-tf-backend.sh  gitops_bump.py  install-tool.sh
(+48 files in other folders)
