[project]
name = "calculator-ai-service"
version = "0.1.0"
description = "LLM-backed natural-language math solver for OnePlatform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "httpx==0.27.2",
  "prometheus-fastapi-instrumentator==7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
  "pylint==3.3.1",
  "ruff==0.6.9",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report=term --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"
